[package]
name = "rdf-proofs-wasm"
version = "0.1.0"
edition = "2021"
authors = ["yamdan"]
license = "MIT"
repository = "https://github.com/zkp-ld/rdf-proofs-wasm"
description = "WASM binding for rdf-proofs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.1", optional = true }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = "0.2"
js-sys = "0.3"
rdf-proofs = { git = "https://github.com/zkp-ld/rdf-proofs.git", version = "0.2.5", default-features = false, features = [
    "wasmer-js",
] }
rdf-canon = { git = "https://github.com/zkp-ld/rdf-canon.git", version = "0.13.0" }
oxrdf = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b" } # to be fixed once Oxigraph v0.4 is released
oxttl = { git = "https://github.com/oxigraph/oxigraph.git", rev = "922023b" } # will be fixed once oxttl is published on crates.io
ark-std = { version = "0.4", default-features = false }
web-sys = { version = "0.3", features = ["console"] }

[features]
console = ["console_error_panic_hook"]
