[package]
name = "rdf-proofs-wasm"
version = "0.13.3"
edition = "2021"
authors = ["yamdan"]
license = "MIT"
repository = "https://github.com/zkp-ld/rdf-proofs-wasm"
description = "WASM binding for rdf-proofs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
ark-std = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.92"
js-sys = "0.3"
rdf-proofs = { version = "0.10.0-alpha.0", default-features = false, features = [
    "wasmer-js",
] }
web-sys = { version = "0.3", features = ["console"] }

[features]
console = ["console_error_panic_hook"]

[profile.dev]
opt-level = 1
